--- a/templates/pokemon/index.html.twig
+++ b/templates/pokemon/index.html.twig
@@ -1,91 +1,56 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello Pokémon Trainer!{% endblock %}
+{% block title %}Pokédex{% endblock %}
 
 {% block body %}
-<style>
-    body {
-        margin: 20px;
-        font-family: Arial, sans-serif;
-        background: #1A202C;
-        color: white;
-    }
+    <div class="container">
 
-    .image-grid {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 20px;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
+        <h1>Welcome Pokémon Trainer</h1>
+        <hr style="margin-bottom: 20px;">
 
-    .image-grid img {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-    }
+        <div class="card-grid">
+            {% for card in cards %}
+                <div class="card">
+                    <a href="{{ path('pokemon_profile', { id: card.id}) }}" class="card-link" target="_blank" title="{{ card.name }}">
+                        <img src="{{ card.images.0.small }}" alt="{{ card.name }}">
+                        <div class="card-info">
+                            <h2 class="card-name">{{ card.name }}</h2>
+                            <p class="card-id"><strong>Id:</strong> <i>{{ card.id }}</i></p>
+                            <p class="card-type"><strong>Types:</strong></p>
+                            <ul>
+                                {% if card.types is null %}
+                                    <li>N/A</li>
+                                {% else %}
+                                    {% for type in card.types %}
+                                        <li>{{ type }}</li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </div>
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
 
-    h1 {
-        text-align: center;
-        margin-bottom: 20px;
-    }
+        <div class="pagination">
+            {% if pager.hasPreviousPage %}
+                <a href="{{ path('pokemon_list', { 'page': pager.previousPage }) }}">&laquo; Anterior</a>
+            {% else %}
+                <span class="disabled">&laquo; Anterior</span>
+            {% endif %}
 
-    .pagination {
-        display: flex;
-        justify-content: center;
-        margin-top: 20px;
-    }
+            {% for page in 1..pager.nbPages %}
+                <a href="{{ path('pokemon_list', { 'page': page }) }}"
+                   {% if page == pager.currentPage %}class="disabled"{% endif %}>{{ page }}</a>
+            {% endfor %}
 
-    .pagination a {
-        margin: 0 5px;
-        padding: 10px;
-        text-decoration: none;
-        background-color: #007bff;
-        color: white;
-        border-radius: 5px;
-    }
-
-    .pagination a:hover {
-        background-color: #0056b3;
-    }
-
-    .pagination .disabled {
-        background-color: #ddd;
-        cursor: not-allowed;
-        margin: 0 5px;
-        padding: 10px;
-        text-decoration: none;
-        color: white;
-        border-radius: 5px;
-    }
-</style>
-
-
-    <h1>Pokémon List</h1>
-    <div class="image-grid">
-        {% for card in cards %}
-            <div>
-                <img src="{{ card.images.0.small }}" alt="{{ card.name }}">
-            </div>
-        {% endfor %}
+            {% if pager.hasNextPage %}
+                <a href="{{ path('pokemon_list', { 'page': pager.nextPage }) }}">Próximo &raquo;</a>
+            {% else %}
+                <span class="disabled">Próximo &raquo;</span>
+            {% endif %}
+        </div>
     </div>
 
-    <div class="pagination">
-        {% if pager.hasPreviousPage %}
-            <a href="{{ path('pokemon_list', { 'page': pager.previousPage }) }}">&laquo; Anterior</a>
-        {% else %}
-            <span class="disabled">&laquo; Anterior</span>
-        {% endif %}
-
-        {% for page in 1..pager.nbPages %}
-            <a href="{{ path('pokemon_list', { 'page': page }) }}" {% if page == pager.currentPage %}class="disabled"{% endif %}>{{ page }}</a>
-        {% endfor %}
-
-        {% if pager.hasNextPage %}
-            <a href="{{ path('pokemon_list', { 'page': pager.nextPage }) }}">Próximo &raquo;</a>
-        {% else %}
-            <span class="disabled">Próximo &raquo;</span>
-        {% endif %}
-    </div>
 
 {% endblock %}
