--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -163,7 +163,7 @@ h1 {
     justify-content: center;
     align-items: center;
     height: 50vh;
-    background-color: #f8d7da;
+    background-color: #1A202C ;
     color: #721c24;
     font-family: Arial, sans-serif;
 }
